# BlueBrilliant

./: .gitignore  Cargo.toml  README.md  dockerfile
BlueBrilliant/: Cargo.toml
BlueBrilliant/src/: bb-movegen.sh  board.rs  comp.txt  evaluation.rs  gui.rs  main.rs  mod.rs  play.rs  prepare_opening_book.py  server.rs  test  test.rs  todo.txt  transposition.rs
BlueBrilliant/src/game/: board.rs  evaluation.rs  initialization.rs  mod.rs  moves.rs  play  play.rs  rules.rs  server.rs  test  test.rs  todo.txt  transposition.rs  utilities.rs
frontend/: board.js  index.html  setup.js  styles.css  utilities.js
