[package]
name = "BlueBrilliant"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server" # This is the name of the binary
path = "src/server.rs" # Path to your server file

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "0.8.4"
rocket = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]